app/src/styles/_global.scss
* {
  box-sizing: border-box;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

html {
  font-size: 10px;

  @media (query('xl')) {
    font-size: 10 / 1440 * 100vw;
  }
}

html,
body {
  width: 100%;
}

::selection {
  background-color: #ccc;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 400;
}

a {
  color: currentColor;
  text-decoration: none;

  &:focus {
    outline-color: $crimson;
  }
}

.serif {
  font-weight: 500;
}

.o50 {
  opacity: 0.5;
}

.o75 {
  opacity: 0.75;
}

.o80 {
  opacity: 0.8;
}

